salesforce_sfdx_QA/main/default/objects/Account/fields/Agreement_Signature_Account_RepName__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signature_Account_RepName__c</fullName>
    <label>Agreement &amp; Signature - Account Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>