salesforce_sfdx_QA/main/default/objects/Account/fields/Agreement_Signature_Signature__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signature_Signature__c</fullName>
    <label>Agreement &amp; Signature - Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>