salesforce_sfdx_QA/main/default/objects/Account/fields/Assigned_AE_BD__c.field-meta.xml
<CustomField>
    <fullName>Assigned_AE_BD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned AE/BD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>