salesforce_sfdx_QA/main/default/objects/Account/fields/Bin__c.field-meta.xml
<CustomField>
    <fullName>Bin__c</fullName>
    <label>Bin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>