salesforce_sfdx_QA/main/default/objects/Account/fields/Borough__c.field-meta.xml
<CustomField>
    <fullName>Borough__c</fullName>
    <description>The name of the borough where the account is located as determined by the first digit of the account number.
3 - Bronx
6 - Brooklyn
4 - Manhattan
2 - Queens
7 - Staten Island
5 - Westchester</description>
    <inlineHelpText>The name of the borough where the account is located as determined by the first digit of the account number.
3 - Bronx
6 - Brooklyn
4 - Manhattan
2 - Queens
7 - Staten Island
5 - Westchester</inlineHelpText>
    <label>Borough</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bronx</fullName>
            </value>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>Staten Island</fullName>
            </value>
            <value>
                <fullName>Westchester</fullName>
            </value>
            <value>
                <fullName>Queens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>