salesforce_sfdx_QA/main/default/objects/Account/fields/BQDemandMgtProgramSmallCommercial__c.field-meta.xml
<CustomField>
    <fullName>BQDemandMgtProgramSmallCommercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BQ Demand Mgt Program(Small Commercial)</label>
    <type>Checkbox</type>
</CustomField>