salesforce_sfdx_QA/main/default/objects/Account/fields/BusinessDevelopmentManager__c.field-meta.xml
<CustomField>
    <fullName>BusinessDevelopmentManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Business Dev Manager for hte Contractor account US18209</description>
    <inlineHelpText>Business Dev Manager for this contract account</inlineHelpText>
    <label>BusinessDevelopmentManager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>