salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Address2__c.field-meta.xml
<CustomField>
    <fullName>CE_Address2__c</fullName>
    <label>Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>