salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>CE_Alternate_Phone__c</fullName>
    <description>Alternate Phone Number</description>
    <inlineHelpText>Alternate Phone Number</inlineHelpText>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>