salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Annualized_Consumption__c.field-meta.xml
<CustomField>
    <fullName>CE_Annualized_Consumption__c</fullName>
    <label>kWh Annualized Consumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>