salesforce_sfdx_QA/main/default/objects/Account/fields/CE_ATRA_Account__c.field-meta.xml
<CustomField>
    <fullName>CE_ATRA_Account__c</fullName>
    <description>ATRA Account Number - Contains Original Account Number after Account Transfer</description>
    <inlineHelpText>ATRA Account Number - Contains Original Account Number after Account Transfer</inlineHelpText>
    <label>ATRA Account</label>
    <length>40</length>
    <type>Text</type>
</CustomField>