salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Block__c.field-meta.xml
<CustomField>
    <fullName>CE_Block__c</fullName>
    <description>Address Block Number (PLUTO)</description>
    <inlineHelpText>CIS Data - Imported - Address Block Number</inlineHelpText>
    <label>Block</label>
    <length>5</length>
    <type>Text</type>
</CustomField>