salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Building_Type__c.field-meta.xml
<CustomField>
    <fullName>CE_Building_Type__c</fullName>
    <description>Building class code as defined by the NYC Department of Planning</description>
    <inlineHelpText>Building class code as defined by the NYC Department of Planning</inlineHelpText>
    <label>Building Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>