salesforce_sfdx_QA/main/default/objects/Account/fields/CE_C_I_Notes__c.field-meta.xml
<CustomField>
    <fullName>CE_C_I_Notes__c</fullName>
    <label>C&amp;I Review Decision Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>