salesforce_sfdx_QA/main/default/objects/Account/fields/CE_C_I_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>CE_C_I_Review_Date__c</fullName>
    <description>Date Account was reviewed</description>
    <inlineHelpText>Date Account was reviewed</inlineHelpText>
    <label>C&amp;I Review Date</label>
    <type>Date</type>
</CustomField>