salesforce_sfdx_QA/main/default/objects/Account/fields/CE_C_I_Review_Result__c.field-meta.xml
<CustomField>
    <fullName>CE_C_I_Review_Result__c</fullName>
    <description>Eligibility Result</description>
    <inlineHelpText>Eligibility Result</inlineHelpText>
    <label>C&amp;I Review Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved Both</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved Electric</fullName>
            </value>
            <value>
                <fullName>Approved Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>