salesforce_sfdx_QA/main/default/objects/Account/fields/CE_CIS_Service_Class__c.field-meta.xml
<CustomField>
    <fullName>CE_CIS_Service_Class__c</fullName>
    <label>CIS Service Class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>