salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Dwelling_Units__c.field-meta.xml
<CustomField>
    <fullName>CE_Dwelling_Units__c</fullName>
    <description>CIS Data - Imported - Number of dwelling units for Multi-family structures.</description>
    <inlineHelpText>CIS Data - Imported - Number of dwelling units for Multi-family structures.</inlineHelpText>
    <label>Dwelling Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>