salesforce_sfdx_QA/main/default/objects/Account/fields/CE_EL_PSC_SC__c.field-meta.xml
<CustomField>
    <fullName>CE_EL_PSC_SC__c</fullName>
    <label>CE_EL_PSC_SC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>