salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Eligibility_Override_Request__c.field-meta.xml
<CustomField>
    <fullName>CE_Eligibility_Override_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eligibility override is requested</description>
    <label>Eligibility Override Request</label>
    <type>Checkbox</type>
</CustomField>