salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Eligibility_Override_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>CE_Eligibility_Override_Request_Date__c</fullName>
    <label>Eligibility Override Request Date</label>
    <type>Date</type>
</CustomField>