salesforce_sfdx_QA/main/default/objects/Account/fields/CE_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>CE_GeoLocation__c</fullName>
    <label>GeoLocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>