salesforce_sfdx_QA/main/default/objects/Account/fields/CE_GeoNetwork__c.field-meta.xml
<CustomField>
    <fullName>CE_GeoNetwork__c</fullName>
    <description>Geographical Network Name for Account</description>
    <inlineHelpText>Geographical Network Name for Account</inlineHelpText>
    <label>GeoNetwork</label>
    <length>50</length>
    <type>Text</type>
</CustomField>