salesforce_sfdx_QA/main/default/objects/Account/fields/CE_GS_Active__c.field-meta.xml
<CustomField>
    <fullName>CE_GS_Active__c</fullName>
    <inlineHelpText>Is the Gas Service Active? Yes/No</inlineHelpText>
    <label>Gas Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>