salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Incentive_City__c.field-meta.xml
<CustomField>
    <fullName>CE_Incentive_City__c</fullName>
    <label>Incentive City</label>
    <length>70</length>
    <type>Text</type>
</CustomField>