salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Incentive_State__c.field-meta.xml
<CustomField>
    <fullName>CE_Incentive_State__c</fullName>
    <label>Incentive State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>