salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Incentive_Street__c.field-meta.xml
<CustomField>
    <fullName>CE_Incentive_Street__c</fullName>
    <label>Incentive Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>