salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Life_Saving_Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>CE_Life_Saving_Equipment_Description__c</fullName>
    <description>Enter type of life saving equipment in the building</description>
    <inlineHelpText>Enter type of life saving equipment in the building</inlineHelpText>
    <label>Life Saving Equipment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>