salesforce_sfdx_QA/main/default/objects/Account/fields/CE_LMI_Eligible__c.field-meta.xml
<CustomField>
    <fullName>CE_LMI_Eligible__c</fullName>
    <label>LMI Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>