salesforce_sfdx_QA/main/default/objects/Account/fields/CE_MF_Low_Income__c.field-meta.xml
<CustomField>
    <fullName>CE_MF_Low_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MF Low Income</label>
    <type>Checkbox</type>
</CustomField>