salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Network__c.field-meta.xml
<CustomField>
    <fullName>CE_Network__c</fullName>
    <description>Engineering Network Name for Account</description>
    <inlineHelpText>Engineering Network Name for Account</inlineHelpText>
    <label>Network</label>
    <length>50</length>
    <type>Text</type>
</CustomField>