salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Other_Program_Participation__c.field-meta.xml
<CustomField>
    <fullName>CE_Other_Program_Participation__c</fullName>
    <label>Other Program Participation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Res Direct Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>