salesforce_sfdx_QA/main/default/objects/Account/fields/CE_SBDI_Eligible__c.field-meta.xml
<CustomField>
    <fullName>CE_SBDI_Eligible__c</fullName>
    <description>If Yes, Account is SBDI Eligible</description>
    <inlineHelpText>If Yes, Account is SBDI Eligible</inlineHelpText>
    <label>SBDI Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>