salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>CE_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas Only</fullName>
            </value>
            <value>
                <fullName>Electric Only</fullName>
            </value>
            <value>
                <fullName>Electric &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>