salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Turn_on_Date__c.field-meta.xml
<CustomField>
    <fullName>CE_Turn_on_Date__c</fullName>
    <description>CIS Data - Imported</description>
    <inlineHelpText>CIS Data - Imported</inlineHelpText>
    <label>Turn on Date</label>
    <type>Date</type>
</CustomField>