salesforce_sfdx_QA/main/default/objects/Account/fields/CE_Vendor_Site_Code__c.field-meta.xml
<CustomField>
    <fullName>CE_Vendor_Site_Code__c</fullName>
    <label>Vendor Site Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>