salesforce_sfdx_QA/main/default/objects/Account/fields/Commercial_Direct_Install__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Direct_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Direct Install</label>
    <type>Checkbox</type>
</CustomField>