salesforce_sfdx_QA/main/default/objects/Account/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <label>Confirmation Code</label>
    <type>AutoNumber</type>
</CustomField>