salesforce_sfdx_QA/main/default/objects/Account/fields/Contact_Email_5__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_5__c</fullName>
    <label>* Contact Email (5)</label>
    <type>Email</type>
</CustomField>