salesforce_sfdx_QA/main/default/objects/Account/fields/Contact_Name_4__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_4__c</fullName>
    <label>* Contact Name (4)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>