salesforce_sfdx_QA/main/default/objects/Account/fields/Contact_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_1__c</fullName>
    <label>* Contact Phone (1)</label>
    <type>Phone</type>
</CustomField>