salesforce_sfdx_QA/main/default/objects/Account/fields/Contact_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_3__c</fullName>
    <label>* Contact Phone (3)</label>
    <type>Phone</type>
</CustomField>