salesforce_sfdx_QA/main/default/objects/Account/fields/Contact_Title_6__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title_6__c</fullName>
    <label>* Contact Title (6)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>