salesforce_sfdx_QA/main/default/objects/Account/fields/Contractor_Id__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Id__c</fullName>
    <description>Reference number for contractor acounts</description>
    <label>Contractor Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>