salesforce_sfdx_QA/main/default/objects/Account/fields/Customer_References_1_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_References_1_Contact_Name__c</fullName>
    <label>Customer References (1) - Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>