salesforce_sfdx_QA/main/default/objects/Account/fields/Customer_References_1_Describe_Proj__c.field-meta.xml
<CustomField>
    <fullName>Customer_References_1_Describe_Proj__c</fullName>
    <label>Customer References (1) - Describe Proj</label>
    <type>TextArea</type>
</CustomField>