salesforce_sfdx_QA/main/default/objects/Account/fields/Customer_References_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_References_1_Phone__c</fullName>
    <label>Customer References (1) - Phone</label>
    <type>Phone</type>
</CustomField>