salesforce_sfdx_QA/main/default/objects/Account/fields/Customer_References_2_DescribeProj__c.field-meta.xml
<CustomField>
    <fullName>Customer_References_2_DescribeProj__c</fullName>
    <label>Customer References (2) - Describe Proj</label>
    <type>TextArea</type>
</CustomField>