salesforce_sfdx_QA/main/default/objects/Account/fields/Customer_References_3_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_References_3_Company_Name__c</fullName>
    <label>Customer References (3) - Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>