salesforce_sfdx_QA/main/default/objects/Account/fields/Data_Change_Request_Justification__c.field-meta.xml
<CustomField>
    <fullName>Data_Change_Request_Justification__c</fullName>
    <label>Data Change Request Justification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New account opened and belongs in this grouping</fullName>
            </value>
            <value>
                <fullName>Customer identified this account as part of grouping</fullName>
            </value>
            <value>
                <fullName>Ineligible account, multifamily account</fullName>
            </value>
            <value>
                <fullName>Account to small to qualify for C&amp;I</fullName>
            </value>
            <value>
                <fullName>Customer confirmed account no longer part of grouping</fullName>
            </value>
            <value>
                <fullName>Accounts have same address</fullName>
            </value>
            <value>
                <fullName>Accounts located within same building</fullName>
            </value>
            <value>
                <fullName>Customer confirmed ownership of accounts/buildings</fullName>
            </value>
            <value>
                <fullName>Same ownership, but different customer names</fullName>
            </value>
            <value>
                <fullName>Customer Name is incorrect</fullName>
            </value>
            <value>
                <fullName>Customer Segment is incorrect</fullName>
            </value>
            <value>
                <fullName>Account is leased, occupied by tenant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>