salesforce_sfdx_QA/main/default/objects/Account/fields/Demand_Response_Program_Pre_Apprvd__c.field-meta.xml
<CustomField>
    <fullName>Demand_Response_Program_Pre_Apprvd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demand Response Program(Pre-Apprvd)</label>
    <type>Checkbox</type>
</CustomField>