salesforce_sfdx_QA/main/default/objects/Account/fields/Documents_Ready__c.field-meta.xml
<CustomField>
    <fullName>Documents_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I have the necessary documents ready</label>
    <type>Checkbox</type>
</CustomField>