salesforce_sfdx_QA/main/default/objects/Account/fields/EEDM_Code__c.field-meta.xml
<CustomField>
    <fullName>EEDM_Code__c</fullName>
    <label>EEDM Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>