salesforce_sfdx_QA/main/default/objects/Account/fields/Eligibility_Override_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Override_Request_Reason__c</fullName>
    <label>Eligibility Override Request Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>