salesforce_sfdx_QA/main/default/objects/Account/fields/Email_Address_of_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_of_Primary_Contact__c</fullName>
    <label>Email Address Of Primary Contact</label>
    <type>Email</type>
</CustomField>