salesforce_sfdx_QA/main/default/objects/Account/fields/ExternalUnique_Id__c.field-meta.xml
<CustomField>
    <fullName>ExternalUnique_Id__c</fullName>
    <formula>Null</formula>
    <label>External Id-Unique Id</label>
    <type>Text</type>
</CustomField>