salesforce_sfdx_QA/main/default/objects/Account/fields/Fax_Number_of_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number_of_Primary_Contact__c</fullName>
    <label>* Fax Number of Primary Contact</label>
    <type>Phone</type>
</CustomField>