salesforce_sfdx_QA/main/default/objects/Account/fields/Fuel_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Specialty__c</fullName>
    <label>Fuel Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>