salesforce_sfdx_QA/main/default/objects/Account/fields/Fuel_Specialty_Steam__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Specialty_Steam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Specialty - Steam</label>
    <type>Checkbox</type>
</CustomField>