salesforce_sfdx_QA/main/default/objects/Account/fields/Full_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Shipping_Address__c</fullName>
    <formula>ShippingStreet + ", " + ShippingCity + ", " + ShippingState + " " + ShippingPostalCode + " " + ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Shipping Address</label>
    <type>Text</type>
</CustomField>