salesforce_sfdx_QA/main/default/objects/Account/fields/Gas_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Gas_Account_Type__c</fullName>
    <formula>Null</formula>
    <label>Gas Account Type</label>
    <type>Text</type>
</CustomField>