salesforce_sfdx_QA/main/default/objects/Account/fields/Gas_Heating__c.field-meta.xml
<CustomField>
    <fullName>Gas_Heating__c</fullName>
    <description>Is the Gas account for heating?</description>
    <inlineHelpText>Is the Gas account for heating?</inlineHelpText>
    <label>Gas Heating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>