salesforce_sfdx_QA/main/default/objects/Account/fields/GLI_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>GLI_Exp_Date__c</fullName>
    <label>General Liability Insurance Expiration</label>
    <type>Date</type>
</CustomField>