salesforce_sfdx_QA/main/default/objects/Account/fields/Has_Sent_Registration_Received_Email__c.field-meta.xml
<CustomField>
    <fullName>Has_Sent_Registration_Received_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>False when the pc has not received the initial registration received email</description>
    <label>Has Sent Registration Received Email</label>
    <type>Checkbox</type>
</CustomField>