salesforce_sfdx_QA/main/default/objects/Account/fields/How_Did_You_Hear_About_the_Program__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_the_Program__c</fullName>
    <label>How Did You Hear About the Program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>ConEdison Employee</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other, please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>