salesforce_sfdx_QA/main/default/objects/Account/fields/HTG__c.field-meta.xml
<CustomField>
    <fullName>HTG__c</fullName>
    <description>This field shows if the account is Interruptible or not</description>
    <inlineHelpText>INT - Interruptible Account
HTG- Heating Gas</inlineHelpText>
    <label>HTG</label>
    <length>6</length>
    <type>Text</type>
</CustomField>