salesforce_sfdx_QA/main/default/objects/Account/fields/HVAC_Upstream_Electric__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Upstream_Electric__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVAC Upstream Electric</label>
    <type>Checkbox</type>
</CustomField>