salesforce_sfdx_QA/main/default/objects/Account/fields/I_have_read_and_accept_the_PC_agreement__c.field-meta.xml
<CustomField>
    <fullName>I_have_read_and_accept_the_PC_agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I have read and accept the PC agreement</label>
    <type>Checkbox</type>
</CustomField>