salesforce_sfdx_QA/main/default/objects/Account/fields/InstantLightingIncentiveParticipant__c.field-meta.xml
<CustomField>
    <fullName>InstantLightingIncentiveParticipant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instant Lighting Incentive Participant</label>
    <type>Checkbox</type>
</CustomField>