salesforce_sfdx_QA/main/default/objects/Account/fields/Insurance_Info_Amount_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Amount_of_Coverage__c</fullName>
    <label>Insurance Info - Amount of Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>