salesforce_sfdx_QA/main/default/objects/Account/fields/Insurance_Info_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Company_Name__c</fullName>
    <label>Insurance Info - Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>