salesforce_sfdx_QA/main/default/objects/Account/fields/Insurance_Info_Policy_EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Policy_EffectiveDate__c</fullName>
    <label>Insurance Info - Policy Effective Date</label>
    <type>Date</type>
</CustomField>