salesforce_sfdx_QA/main/default/objects/Account/fields/Insurance_Info_Policy_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Policy_Expiration_Date__c</fullName>
    <label>Insurance Info - Policy Expiration Date</label>
    <type>Date</type>
</CustomField>