salesforce_sfdx_QA/main/default/objects/Account/fields/Insurance_Info_Street_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Street_Mailing_Address__c</fullName>
    <label>Insurance Info - Street Mailing Address</label>
    <length>24</length>
    <type>Text</type>
</CustomField>