salesforce_sfdx_QA/main/default/objects/Account/fields/Insurance_Info_StreetMailingAddress__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_StreetMailingAddress__c</fullName>
    <label>Insurance Info - Street Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>