salesforce_sfdx_QA/main/default/objects/Account/fields/Insurance_Info_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info_Zip_Code__c</fullName>
    <label>Insurance Info - Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>